--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     </header>
     <div>
         <h1 class="heading ">JANE BLOGLIFE</h1>
-        <h6 class="small-head ">Welcome to the blog of
+        <h6 class="small-heading ">Welcome to the blog of
             <span class="span ">JANE's world</span>
         </h6>
     </div>
 
     <div class="jane ">
         <h3 class="text ">Jane's</h3>
-        <h1 class="fashn ">FASHION BLOG</h1>
+        <h1 class="fashion ">FASHION BLOG</h1>
         <h6 class="btn ">
             <button class="button ">Subscribe</button>
         </h6>
@@ -58,7 +58,7 @@
         <div class="blog_left_section ">
             <div class="blog1 ">
                 <h3 class="box ">TITLE HEADING</h3>
-                <h5 class="des ">Title description,
+                <h5 class="description ">Title description,
                     <span class="may ">May 2, 2016</span>
                 </h5>
                 <div class="girl ">
@@ -79,7 +79,7 @@
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                     exercitation ullamco.
                 </p>
-                <div class="but ">
+                <div class="img_button ">
                     <button ><img src="images/like.png " alt="reload ">
                         Like</button>
                     <button class="last-tag ">Replies
@@ -89,7 +89,7 @@
 
             <div class="blog2 ">
                 <h3 class="box ">TITLE HEADING</h3>
-                <h5 class="des ">Title description,
+                <h5 class="description ">Title description,
                     <span class="may "> April 23, 2016</span>
                 </h5>
                 <div class="girl ">
@@ -109,7 +109,7 @@
                     congue
                     gravida diam non fringilla.
                 </p>
-                <div class="but ">
+                <div class="img_button ">
                     <button ><img src="images/like.png " alt="reload ">
                         Like</button>
                     <button class="last-tag ">Replies</button>
@@ -117,7 +117,7 @@
             </div>
             <div class="blog3 ">
                 <h3 class="box ">TITLE HEADING</h3>
-                <h5 class="des ">Title description,
+                <h5 class="description ">Title description,
                     <span class="may "> April 7, 2016</span>
                 </h5>
                 <div class="girl ">
@@ -137,7 +137,7 @@
                     congue
                     gravida diam non fringilla.
                 </p>
-                <div class="but ">
+                <div class="img_button ">
                     <button><img src="images/like.png " alt="reload ">
                         Like</button>
                     <button class="last-tag ">Replies</button>
